# foj-wallpaper

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: default.html  doc.html  index.html  language.js  language.json  menu_page.html  setting.html
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs
