[package]
name = "foj-wallpaper"
version = "0.1.1"
description = "A lightweight, dynamic wallpaper manager for HTML/CSS/JS content."
authors = ["Василь Музика <vasiliy.muz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "system-tray", "devtools"] }
# , "devtools"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-wallpaper = "0.0.1"
mouse_position = "0.1.3"
winreg = "0.55.0"
sys-locale = "0.3.2"

sysinfo = "0.37.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "gzip", "deflate"] }
once_cell = "1.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# custom-protocol = ["tauri/custom-protocol"]
